tests/expectations/compiler/async_blocks/too_many_captures_fail.out
Error [ESAZ0374011]: A `final` block cannot capture more than 16 variables, found one attempting to capture 20 variables.
    --> compiler-test:25:17
     |
  25 |         let f = final {
     |                 ^^^^^^^
  26 |             assert(a0 == 0);
     |             ^^^^^^^^^^^^^^^^
  27 |             assert(a1 == 0);
     |             ^^^^^^^^^^^^^^^^
  28 |             assert(a2 == 0);
     |             ^^^^^^^^^^^^^^^^
  29 |             assert(a3 == 0);
     |             ^^^^^^^^^^^^^^^^
  30 |             assert(a4 == 0);
     |             ^^^^^^^^^^^^^^^^
  31 |             assert(a5 == 0);
     |             ^^^^^^^^^^^^^^^^
  32 |             assert(a6 == 0);
     |             ^^^^^^^^^^^^^^^^
  33 |             assert(a7 == 0);
     |             ^^^^^^^^^^^^^^^^
  34 |             assert(a8 == 0);
     |             ^^^^^^^^^^^^^^^^
  35 |             assert(a9 == 0);
     |             ^^^^^^^^^^^^^^^^
  36 |             assert(b0 == 0);
     |             ^^^^^^^^^^^^^^^^
  37 |             assert(b1 == 0);
     |             ^^^^^^^^^^^^^^^^
  38 |             assert(b2 == 0);
     |             ^^^^^^^^^^^^^^^^
  39 |             assert(b3 == 0);
     |             ^^^^^^^^^^^^^^^^
  40 |             assert(b4 == 0);
     |             ^^^^^^^^^^^^^^^^
  41 |             assert(b5 == 0);
     |             ^^^^^^^^^^^^^^^^
  42 |             assert(b6 == 0);
     |             ^^^^^^^^^^^^^^^^
  43 |             assert(b7 == 0);
     |             ^^^^^^^^^^^^^^^^
  44 |             assert(b8 == 0);
     |             ^^^^^^^^^^^^^^^^
  45 |             assert(b9 == 0);
     |             ^^^^^^^^^^^^^^^^
  46 |         };
     |         ^
